홈페이지 구조 간소화

--- a/index.html
+++ b/index.html
@@ -55,4 +55,27 @@
 
 </body>
 
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // Initialize Firebase
+  firebase.initializeApp({
+    apiKey: "AIzaSyDmydE-5DTruStoT0Pry6907fwzyokQB4g",
+    authDomain: "is2you2-home.firebaseapp.com",
+    databaseURL: "https://is2you2-home.firebaseio.com",
+    projectId: "is2you2-home",
+    storageBucket: "is2you2-home.appspot.com",
+    messagingSenderId: "598072137197",
+    appId: "1:598072137197:web:79f0bfee54ab5343ccc3e4",
+    measurementId: "G-34PB3Z0CRJ"
+  });
+  firebase.analytics();
+</script>
+
 </html>
