--- a/starcraft_custom/index.html
+++ b/starcraft_custom/index.html
@@ -24,7 +24,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="starcraft_custom/favicon.png"/>
 
   <title>starcraft_custom_web</title>
   <link rel="manifest" href="manifest.json">
@@ -40,6 +40,6 @@
       });
     }
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="starcraft_custom/main.dart.js" type="application/javascript"></script>
 </body>
 </html>
