href base 변경, 나머지 원복

--- a/starcraft_custom/index.html
+++ b/starcraft_custom/index.html
@@ -11,7 +11,7 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/">
+  <base href="/starcraft_custom/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -24,7 +24,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="starcraft_custom/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>starcraft_custom_web</title>
   <link rel="manifest" href="manifest.json">
@@ -36,10 +36,10 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=341891416');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1265645865');
       });
     }
   </script>
-  <script src="starcraft_custom/main.dart.js" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
