--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
+	<script data-ad-client="ca-pub-5461508772331800" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<link id='-gd-engine-icon' rel='icon' type='image/png' href='favicon.png' />
 	<title>liss22's Home</title>
 	<style type='text/css'>
