자유채팅 개인정보처리방침 수정

--- a/diyfreechat/privacy_page/index.html
+++ b/diyfreechat/privacy_page/index.html
@@ -11,6 +11,7 @@
   <!-- This line removes any default padding and style.
        You might only need one of these values set. -->
   <style> body { padding: 0; margin: 0; } </style>
+  <title>자유채팅 개인정보처리방침</title>
 </head>
 
 <body>
