--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Project: Cone</title>
 
-  <base href="/">
+  <base href="/pjcone_pwa/">
 
   <meta name="color-scheme" content="dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -21,6 +21,6 @@
 
 
   <app-root></app-root>
-<script src="runtime.b77198c0a3967e90.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.17f1142b1fac8b7b.js" type="module"></script>
+<script src="runtime.290083dfe44d1c93.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.ee3c8ef6fe8d7606.js" type="module"></script>
 
 </allow-intent></allow-intent></body></html>
