--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -17,10 +17,27 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <!-- https 일 때에만 동작한다는 썰이 있습니다, 검토 필요 -->
+  <script defer>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('/pjcone_pwa/assets/sw.js')
+        // manifest.webmanifest 와 sw.js 파일을 함께 변경해야 합니다
+        // manifest.icons[i].source / 캐시 경로 ... /pjcone_pwa/**/*
+        // .register('/pjcone_pwa/assets/sw.js')
+        .then(() => { console.log('Service Worker Registered'); })
+        .catch(e => {
+          console.error('Service Worker Register failed: ', e);
+        });
+    }
+  </script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 <style>body{--ion-color-primary:#58a192;--ion-color-primary-rgb:48, 86, 78;--ion-color-primary-contrast:#ffffff;--ion-color-primary-contrast-rgb:255, 255, 255;--ion-color-primary-shade:#213a34;--ion-color-primary-tint:#30564e;--ion-color-secondary:#ffd94e;--ion-color-secondary-rgb:80, 200, 255;--ion-color-secondary-contrast:#ffffff;--ion-color-secondary-contrast-rgb:255, 255, 255;--ion-color-secondary-shade:#ffdf6a;--ion-color-secondary-tint:#ddbb41;--ion-color-tertiary:#ff754e;--ion-color-tertiary-rgb:106, 100, 255;--ion-color-tertiary-contrast:#ffffff;--ion-color-tertiary-contrast-rgb:255, 255, 255;--ion-color-tertiary-shade:#de6340;--ion-color-tertiary-tint:#ff7f5b;--ion-color-success:#58a192;--ion-color-success-rgb:48, 86, 78;--ion-color-success-contrast:#ffffff;--ion-color-success-contrast-rgb:255, 255, 255;--ion-color-success-shade:#213a34;--ion-color-success-tint:#30564e;--ion-color-warning:#ffd534;--ion-color-warning-rgb:255, 213, 52;--ion-color-warning-contrast:#000000;--ion-color-warning-contrast-rgb:0, 0, 0;--ion-color-warning-shade:#e0bb2e;--ion-color-warning-tint:#ffd948;--ion-color-danger:#ff4961;--ion-color-danger-rgb:255, 73, 97;--ion-color-danger-contrast:#ffffff;--ion-color-danger-contrast-rgb:255, 255, 255;--ion-color-danger-shade:#e04055;--ion-color-danger-tint:#ff5b71;--ion-color-dark:#f4f5f8;--ion-color-dark-rgb:244, 245, 248;--ion-color-dark-contrast:#000000;--ion-color-dark-contrast-rgb:0, 0, 0;--ion-color-dark-shade:#d7d8da;--ion-color-dark-tint:#f5f6f9;--ion-color-medium:#989aa2;--ion-color-medium-rgb:152, 154, 162;--ion-color-medium-contrast:#000000;--ion-color-medium-contrast-rgb:0, 0, 0;--ion-color-medium-shade:#86888f;--ion-color-medium-tint:#a2a4ab;--ion-color-light:#222428;--ion-color-light-rgb:34, 36, 40;--ion-color-light-contrast:#ffffff;--ion-color-light-contrast-rgb:255, 255, 255;--ion-color-light-shade:#1e2023;--ion-color-light-tint:#383a3e}html{--ion-font-family:var(--ion-default-font)}body{background:var(--ion-background-color)}@supports (padding-top: 20px){html{--ion-safe-area-top:var(--ion-statusbar-padding)}}@supports (padding-top: constant(safe-area-inset-top)){html{--ion-safe-area-top:constant(safe-area-inset-top);--ion-safe-area-bottom:constant(safe-area-inset-bottom);--ion-safe-area-left:constant(safe-area-inset-left);--ion-safe-area-right:constant(safe-area-inset-right)}}@supports (padding-top: env(safe-area-inset-top)){html{--ion-safe-area-top:env(safe-area-inset-top);--ion-safe-area-bottom:env(safe-area-inset-bottom);--ion-safe-area-left:env(safe-area-inset-left);--ion-safe-area-right:env(safe-area-inset-right)}}*{box-sizing:border-box;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none}html{width:100%;height:100%;-webkit-text-size-adjust:100%;text-size-adjust:100%}html:not(.hydrated) body{display:none}body{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;margin:0;padding:0;position:fixed;width:100%;max-width:100%;height:100%;max-height:100%;transform:translateZ(0);text-rendering:optimizeLegibility;overflow:hidden;touch-action:manipulation;-webkit-user-drag:none;-ms-content-zooming:none;word-wrap:break-word;overscroll-behavior-y:none;-webkit-text-size-adjust:none;text-size-adjust:none}html{font-family:var(--ion-font-family)}</style><link rel="stylesheet" href="styles.23ee86953ca5f9b2.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.23ee86953ca5f9b2.css"></noscript>
 
 
   <app-root></app-root>
-<script src="runtime.290083dfe44d1c93.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.46d394c7d55f6bd6.js" type="module"></script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime.4be90f29ef03776e.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.138ddddf97d9ecbd.js" type="module"></script>
 
 </allow-intent></allow-intent></body></html>
