메시지 일부가 번역되지 않던 문제 수정

--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Project: Cone</title>
 
-  <base href="/pjcone_pwa/">
+  <base href="/">
 
   <meta name="color-scheme" content="dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -38,6 +38,6 @@
 
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.39f1864fb5c61902.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.9b03070030da037b.js" type="module"></script>
+<script src="runtime.09caede37aff4440.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.a55681e4c7b77d38.js" type="module"></script>
 
 </allow-intent></allow-intent></body></html>
