--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Project: Cone</title>
 
-  <base href="/">
+  <base href="/pjcone_pwa/">
 
   <meta name="color-scheme" content="dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -25,6 +25,7 @@
         // manifest.webmanifest 와 sw.js 파일을 함께 변경해야 합니다
         // manifest.icons[i].source / 캐시 경로 ... /pjcone_pwa/**/*
         // .register('/pjcone_pwa/assets/sw.js')
+        // 이거 바꿀 때 바로 위에 있는 기반 href도 변경하기 -_-;;
         .then(() => { console.log('Service Worker Registered'); })
         .catch(e => {
           console.error('Service Worker Register failed: ', e);
@@ -38,6 +39,6 @@
 
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.002255ef778d290e.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.76fca40cf41ebe1a.js" type="module"></script>
+<script src="runtime.51df45a7132956b0.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.c82d29f973c3bbf7.js" type="module"></script>
 
 </allow-intent></allow-intent></body></html>
