--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Project: Cone</title>
 
-  <base href="/pjcone_pwa/">
+  <base id="site_base" href="/pjcone_pwa/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -20,15 +20,20 @@
   <!-- https 일 때에만 동작한다는 썰이 있습니다, 검토 필요 -->
   <script defer>
     // 예하 경로에 의한 경로찾기 오류 완화용
-    var sub_path = '/pjcone_pwa/'
+    let base = document.getElementById('site_base');
+    var sub_path = base.getAttribute('href');
+    var swReg;
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker
-        .register('/pjcone_pwa/assets/sw.js')
+        .register(`${sub_path}assets/sw.js`)
         // manifest.webmanifest 와 sw.js 파일을 함께 변경해야 합니다
         // manifest.icons[i].source / 캐시 경로 ... /pjcone_pwa/**/*
         // .register('/pjcone_pwa/assets/sw.js')
         // 이거 바꿀 때 바로 위에 있는 기반 href도 변경하기 -_-;;
-        .then(() => { console.log('Service Worker Registered'); })
+        .then((reg) => {
+          console.log('Service Worker Registered');
+          swReg = reg;
+        })
         .catch(e => {
           console.error('Service Worker Register failed: ', e);
         });
@@ -41,6 +46,6 @@
 
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.52d3ed0098f3b09f.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.ae8aa455f793d1d1.js" type="module"></script>
+<script src="runtime.56cbcd3b06444175.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.0425788d05886ee5.js" type="module"></script>
 
 </allow-intent></allow-intent></body></html>
