헤더페이지를 pjcone으로 연결

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=https://is2you2.github.io/starcraft_custom/" />
+<meta http-equiv="refresh" content="0; URL=https://is2you2.github.io/pjcone_pwa/" />
