--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -17,7 +17,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <!-- https 일 때에만 동작한다는 썰이 있습니다, 검토 필요 -->
+  <!-- https 일 때, localhost 일 때 동작함 -->
   <script defer>
     // 예하 경로에 의한 경로찾기 오류 완화용
     let base = document.getElementById('site_base');
@@ -42,6 +42,6 @@
 
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.638411b7fb857e15.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.b38dd7382d6167fe.js" type="module"></script>
+<script src="runtime.271a5f96e5c6a2cd.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.b38dd7382d6167fe.js" type="module"></script>
 
 </allow-intent></allow-intent></body></html>
