통합 소켓 주소로 변경

--- a/starcraft_custom/index.html
+++ b/starcraft_custom/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Project: Cone</title>
 
-  <base id="site_base" href="/starcraft_custom/">
+  <base href="/starcraft_custom/">
 
   <meta name="color-scheme" content="dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -21,6 +21,6 @@
 
 
   <app-root></app-root>
-<script src="runtime.754408958efbe423.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.2f1289d21e48ae12.js" type="module"></script>
+<script src="runtime.754408958efbe423.js" type="module"></script><script src="polyfills.ff60c501a6550566.js" type="module"></script><script src="main.410e05e6d371adfd.js" type="module"></script>
 
 </allow-intent></allow-intent></body></html>
