--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=https://is2you2.github.io/pjcone_pwa/" />
+<meta http-equiv="refresh" content="0; URL=https://is2you2.github.io/ranchat/" />
