--- a/ranchat/index.html
+++ b/ranchat/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Project: 랜덤채팅</title>
 
-  <base href="/">
+  <base href="/ranchat/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
