--- a/ranchat/index.html
+++ b/ranchat/index.html
@@ -5,12 +5,31 @@
   <meta charset="utf-8">
   <title>Project: 랜덤채팅</title>
 
-  <base href="/ranchat/">
+  <base id="site_base" href="/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
+
+  <!-- https 일 때, localhost 일 때 동작함 -->
+  <script defer>
+    // 예하 경로에 의한 경로찾기 오류 완화용
+    let base = document.getElementById('site_base');
+    var sub_path = base.getAttribute('href');
+    var swReg;
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register(`${sub_path}assets/sw.js`)
+        .then((reg) => {
+          console.log('Service Worker Registered');
+          swReg = reg;
+        })
+        .catch(e => {
+          console.error('Service Worker Register failed: ', e);
+        });
+    }
+  </script>
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png">
 
@@ -24,6 +43,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime.0398d77fc528cb02.js" type="module"></script><script src="polyfills.441dd4ca9dc0674f.js" type="module"></script><script src="main.4fc82afbd4222df4.js" type="module"></script></body>
+<script src="runtime.8bc74c0a8b90f7e8.js" type="module"></script><script src="polyfills.441dd4ca9dc0674f.js" type="module"></script><script src="main.40b7d9f3472ebefe.js" type="module"></script></body>
 
 </html>
