--- a/about/index.html
+++ b/about/index.html
@@ -39,14 +39,14 @@
 <meta property="og:locale" content="ko" />
 <meta name="description" content="오픈소스에 기대어 이것 저것 해봅니다" />
 <meta property="og:description" content="오픈소스에 기대어 이것 저것 해봅니다" />
-<link rel="canonical" href="http://172.18.0.2:4000/about/" />
-<meta property="og:url" content="http://172.18.0.2:4000/about/" />
+<link rel="canonical" href="https://is2you2.github.io/about/" />
+<meta property="og:url" content="https://is2you2.github.io/about/" />
 <meta property="og:site_name" content="그림또따" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="About" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"오픈소스에 기대어 이것 저것 해봅니다","headline":"About","name":"그림또따","sameAs":["https://github.com/is2you2"],"url":"http://172.18.0.2:4000/about/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"오픈소스에 기대어 이것 저것 해봅니다","headline":"About","name":"그림또따","sameAs":["https://github.com/is2you2"],"url":"https://is2you2.github.io/about/"}</script>
 <!-- End Jekyll SEO tag -->
 
   
