--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 <meta property="og:locale" content="ko" />
 <meta name="description" content="오픈소스에 기대어 이것 저것 해봅니다" />
 <meta property="og:description" content="오픈소스에 기대어 이것 저것 해봅니다" />
-<link rel="canonical" href="http://172.18.0.2:4000/" />
-<meta property="og:url" content="http://172.18.0.2:4000/" />
+<link rel="canonical" href="https://is2you2.github.io/" />
+<meta property="og:url" content="https://is2you2.github.io/" />
 <meta property="og:site_name" content="그림또따" />
 <meta property="og:type" content="website" />
-<link rel="next" href="http://172.18.0.2:4000/page2" />
+<link rel="next" href="https://is2you2.github.io/page2" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="그림또따" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"오픈소스에 기대어 이것 저것 해봅니다","headline":"그림또따","name":"그림또따","sameAs":["https://github.com/is2you2"],"url":"http://172.18.0.2:4000/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"오픈소스에 기대어 이것 저것 해봅니다","headline":"그림또따","name":"그림또따","sameAs":["https://github.com/is2you2"],"url":"https://is2you2.github.io/"}</script>
 <!-- End Jekyll SEO tag -->
 
   
