--- a/page3/index.html
+++ b/page3/index.html
@@ -39,15 +39,15 @@
 <meta property="og:locale" content="ko" />
 <meta name="description" content="오픈소스에 기대어 이것 저것 해봅니다" />
 <meta property="og:description" content="오픈소스에 기대어 이것 저것 해봅니다" />
-<link rel="canonical" href="http://172.18.0.2:4000/page3/" />
-<meta property="og:url" content="http://172.18.0.2:4000/page3/" />
+<link rel="canonical" href="https://is2you2.github.io/page3/" />
+<meta property="og:url" content="https://is2you2.github.io/page3/" />
 <meta property="og:site_name" content="그림또따" />
 <meta property="og:type" content="website" />
-<link rel="prev" href="http://172.18.0.2:4000/page2" />
+<link rel="prev" href="https://is2you2.github.io/page2" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="그림또따" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"오픈소스에 기대어 이것 저것 해봅니다","headline":"그림또따","url":"http://172.18.0.2:4000/page3/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"오픈소스에 기대어 이것 저것 해봅니다","headline":"그림또따","url":"https://is2you2.github.io/page3/"}</script>
 <!-- End Jekyll SEO tag -->
 
   
