--- a/site_privacy/index.html
+++ b/site_privacy/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Project: Cone</title>
 
-  <base href="/privacy/">
+  <base href="/site_privacy/">
 
   <meta name="color-scheme" content="dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
