--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Project: Cone</title>
 
-  <base id="site_base" href="/pjcone_pwa/">
+  <base id="site_base" href="/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -46,6 +46,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.3ce976964ec646a6.js" type="module"></script><script src="polyfills.c63952985b0fb9d0.js" type="module"></script><script src="main.1a1e4044f2b71abc.js" type="module"></script></body>
+<script src="runtime.1a6c0ce5b16f562b.js" type="module"></script><script src="polyfills.c63952985b0fb9d0.js" type="module"></script><script src="main.b19fbcd637eb7023.js" type="module"></script></body>
 
 </html>
