--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Project: Cone</title>
 
-  <base id="site_base" href="/">
+  <base id="site_base" href="/pjcone_pwa/">
 
   <meta name="color-scheme" content="light dark">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
