--- a/godotchat_pwa/index.html
+++ b/godotchat_pwa/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>개발톡</title>
+  <title>GodotChat</title>
 
   <base id="site_base" href="/godotchat_pwa/">
 
@@ -47,6 +47,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.75d29d4754c91ee0.js" type="module"></script><script src="polyfills.c3a9e4b87df5be46.js" type="module"></script><script src="main.5b2df5258b0a57d4.js" type="module"></script></body>
+<script src="runtime.75d29d4754c91ee0.js" type="module"></script><script src="polyfills.c3a9e4b87df5be46.js" type="module"></script><script src="main.0c80c8107315a538.js" type="module"></script></body>
 
 </html>
