--- a/about/index.html
+++ b/about/index.html
@@ -41,17 +41,17 @@
 <meta property="og:description" content="오픈소스에 기대어 이것 저것 해봅니다" />
 <link rel="canonical" href="https://is2you2.github.io/about/" />
 <meta property="og:url" content="https://is2you2.github.io/about/" />
-<meta property="og:site_name" content="최성수" />
+<meta property="og:site_name" content="그림또따" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="About" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"오픈소스에 기대어 이것 저것 해봅니다","headline":"About","name":"최성수","sameAs":["https://github.com/is2you2"],"url":"https://is2you2.github.io/about/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"오픈소스에 기대어 이것 저것 해봅니다","headline":"About","name":"그림또따","sameAs":["https://github.com/is2you2"],"url":"https://is2you2.github.io/about/"}</script>
 <!-- End Jekyll SEO tag -->
 
   
 
-  <title>About | 최성수
+  <title>About | 그림또따
   </title>
 
   <!--
@@ -66,8 +66,8 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
 <link rel="manifest" href="/assets/img/favicons/site.webmanifest">
 <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
-<meta name="apple-mobile-web-app-title" content="최성수">
-<meta name="application-name" content="최성수">
+<meta name="apple-mobile-web-app-title" content="그림또따">
+<meta name="application-name" content="그림또따">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/assets/img/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
@@ -280,7 +280,7 @@
     </a>
 
     <h1 class="site-title">
-      <a href="/">최성수</a>
+      <a href="/">그림또따</a>
     </h1>
     <p class="site-subtitle fst-italic mb-0">종합 오픈소스 사용자</p>
   </header>
@@ -1034,7 +1034,7 @@
   <p>
     ©
     <time>2025</time>
-    <a href="https://github.com/is2you2">최성수</a>.
+    <a href="https://github.com/is2you2">그림또따</a>.
     
       <span
         data-bs-toggle="tooltip"
