--- a/pjcone_pwa/index.html
+++ b/pjcone_pwa/index.html
@@ -16,14 +16,16 @@
   <script>
     // 예하 경로에 의한 경로찾기 오류 완화용
     let base = document.getElementById('site_base');
-    var sub_path = base.getAttribute('href');
+    const sub_path = base.getAttribute('href');
     var swReg;
-    // 캐시 사용 안하는 경우 아래 코드 사용
-    // caches.keys().then(function (names) {
-    //   names.forEach(function (name) {
-    //     caches.delete(name); // 각 캐시를 삭제
-    //   });
-    // });
+    const useCache = localStorage.getItem('useCache');
+    // 캐시 사용 안하는 경우 모든 캐시 삭제 처리
+    if (!useCache)
+      caches.keys().then(function (names) {
+        names.forEach(function (name) {
+          caches.delete(name); // 각 캐시를 삭제
+        });
+      });
     // 웹 알림의 행동을 미리 기록해두었다가 서비스 워커로부터 신호를 받으면 함수 행동 후 해당 함수 삭제
     var swRegListenerCallback = {};
     if ('serviceWorker' in navigator) {
@@ -51,6 +53,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.ba26151e12d286e2.js" type="module"></script><script src="polyfills.c3a9e4b87df5be46.js" type="module"></script><script src="main.8014616e73802b20.js" type="module"></script></body>
+<script src="runtime.0105c1c621102f6a.js" type="module"></script><script src="polyfills.c3a9e4b87df5be46.js" type="module"></script><script src="main.b8c0787cb3628afa.js" type="module"></script></body>
 
 </html>
