--- a/redraw_mimic/index.html
+++ b/redraw_mimic/index.html
@@ -135,9 +135,6 @@
                 <li><a href="#about"
                         class="text-gray-700 hover:text-purple-600 font-semibold transition-colors duration-300 rounded-md p-1 -m-1 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75">소개</a>
                 </li>
-                <li><a href="#skills"
-                        class="text-gray-700 hover:text-purple-600 font-semibold transition-colors duration-300 rounded-md p-1 -m-1 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75">기술</a>
-                </li>
                 <li><a href="#projects"
                         class="text-gray-700 hover:text-purple-600 font-semibold transition-colors duration-300 rounded-md p-1 -m-1 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75">프로젝트</a>
                 </li>
@@ -199,70 +196,6 @@
                     <p>
                         새로운 도전을 통해 끊임없이 성장하고, 당신의 사진이나 그림에 생명력을 넣는 것에 기여하고 싶습니다.
                     </p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Skills Section -->
-        <section id="skills" class="py-20 md:py-32 section-container">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-800 animate-on-scroll">핵심 역량 및 도구</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Skill Category Card 1 -->
-                <!-- <div class="bg-white p-8 rounded-xl shadow-lg card-hover-effect animate-on-scroll delay-100">
-                    <h3 class="text-2xl font-bold mb-4 text-purple-700 flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-palette mr-3">
-                            <circle cx="12" cy="12" r="10"></circle>
-                            <path d="M12 7V17"></path>
-                            <path d="M16.5 9.5 7.5 14.5"></path>
-                            <path d="M7.5 9.5 16.5 14.5"></path>
-                        </svg>
-                        디자인 &amp; 컨셉
-                    </h3>
-                    <ul class="space-y-3 text-gray-700 text-lg">
-                        <li>UX/UI 디자인</li>
-                        <li>브랜드 아이덴티티</li>
-                        <li>시각 디자인</li>
-                        <li>모션 그래픽</li>
-                        <li>아이디어 발상 &amp; 기획</li>
-                    </ul>
-                </div> -->
-                <!-- Skill Category Card 2 -->
-                <div class="bg-white p-8 rounded-xl shadow-lg card-hover-effect animate-on-scroll delay-200">
-                    <h3 class="text-2xl font-bold mb-4 text-purple-700 flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-paintbrush mr-3">
-                            <path
-                                d="M18.37 2.63a2.42 2.42 0 0 0-3.44 0L2.63 15.06a2.42 2.42 0 0 0 0 3.44l.27.27a2.42 2.42 0 0 0 3.44 0L18.64 6.07a2.42 2.42 0 0 0 0-3.44l-.27-.27Z">
-                            </path>
-                            <path
-                                d="M2.63 15.06l-.27.27a2.42 2.42 0 0 0 0 3.44l6.21 6.21a2.42 2.42 0 0 0 3.44 0L21.37 9.37a2.42 2.42 0 0 0 0-3.44l-.27-.27">
-                            </path>
-                        </svg>
-                        소프트웨어 &amp; 툴
-                    </h3>
-                    <ul class="space-y-3 text-gray-700 text-lg">
-                        <li>간이 그림판 (자체 개발)</li>
-                    </ul>
-                </div>
-                <!-- Skill Category Card 3 -->
-                <div class="bg-white p-8 rounded-xl shadow-lg card-hover-effect animate-on-scroll delay-300">
-                    <h3 class="text-2xl font-bold mb-4 text-purple-700 flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-code mr-3">
-                            <polyline points="16 18 22 12 16 6"></polyline>
-                            <polyline points="8 6 2 12 8 18"></polyline>
-                        </svg>
-                        기술적 이해 (웹)
-                    </h3>
-                    <ul class="space-y-3 text-gray-700 text-lg">
-                        <li>Ionic Frameworks 7</li>
-                        <li>p5.js</li>
-                        <li>Godot Engine 4</li>
-                    </ul>
                 </div>
             </div>
         </section>
@@ -384,7 +317,7 @@
                     새로운 프로젝트 제안, 협업 문의 또는 간단한 대화라도 좋습니다. 언제든지 편하게 연락 주세요!
                 </p>
                 <div class="space-y-6 mb-8">
-                    <a href="mailto:your.email@example.com"
+                    <a href="mailto:is2you246@gmail.com"
                         class="block text-purple-700 hover:text-purple-900 font-semibold text-xl transition-colors duration-300 rounded-md p-2 -m-2 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75 flex items-center justify-center animate-on-scroll delay-300">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -393,30 +326,6 @@
                             <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
                         </svg>
                         is2you246@gmail.com
-                    </a>
-                    <!-- <a href="https://linkedin.com/in/yourprofile" target="_blank"
-                        class="block text-purple-700 hover:text-purple-900 font-semibold text-xl transition-colors duration-300 rounded-md p-2 -m-2 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75 flex items-center justify-center animate-on-scroll delay-400">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-linkedin inline-block mr-3">
-                            <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
-                            </path>
-                            <rect width="4" height="12" x="2" y="9"></rect>
-                            <circle cx="4" cy="4" r="2"></circle>
-                        </svg>
-                        LinkedIn
-                    </a> -->
-                    <a href="https://github.com/is2you2" target="_blank"
-                        class="block text-purple-700 hover:text-purple-900 font-semibold text-xl transition-colors duration-300 rounded-md p-2 -m-2 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75 flex items-center justify-center animate-on-scroll delay-500">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-github inline-block mr-3">
-                            <path
-                                d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3.25 0 6.8-.5 6.8-7 0-1.6-2.5-3-2.8-3.7 1-1.4 1-3.3 0-4.3C19 3.4 17.5 2 15 2c-1.5 0-3 .6-4 1.5-1-.9-2.5-1.5-4-1.5-2.5 0-4 1.4-4.2 2.7-.8.8-.7 2.6 0 4.3C2.5 12.5 6 12 9.25 12c-1 .3-2 1.2-2 3v4">
-                            </path>
-                            <path d="M9 18c-4.5 1.2-5 3-5 3"></path>
-                        </svg>
-                        GitHub
                     </a>
                 </div>
             </div>
