redraw_mimic 내용 변경

--- a/redraw_mimic/index.html
+++ b/redraw_mimic/index.html
@@ -287,9 +287,9 @@
                             <span
                                 class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">기념일</span>
                             <span
-                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">광복절</span>
+                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">위인</span>
                             <span
-                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">김구</span>
+                                class="bg-purple-100 text-purple-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">추모</span>
                         </div>
                     </div>
                 </div>
