--- a/redraw_mimic/index.html
+++ b/redraw_mimic/index.html
@@ -333,12 +333,12 @@
     <footer class="bg-gray-900 text-white py-8 mt-16 rounded-t-3xl shadow-inner">
         <div class="section-container text-center text-sm opacity-80 space-y-2">
             <p>&copy; 2025 그림또따. 모든 권리 보유. | 디자인 및 개발: 그림또따</p>
-            <div class="pt-4 border-t border-gray-700 mt-4">
+            <!-- <div class="pt-4 border-t border-gray-700 mt-4">
                 <p class="font-bold text-gray-400 mb-2">사업자 정보</p>
                 <p>상호: 플레이디버그연구소</p>
                 <p>사업자등록번호: 568-61-00832</p>
                 <p>사업장 주소: 서울특별시 관악구 쑥고개로2길 11, 201호(신림동)</p>
-            </div>
+            </div> -->
         </div>
     </footer>
 
