redraw_mimic 유튜브 제목 변경에 따른 내용 변경

--- a/redraw_mimic/index.html
+++ b/redraw_mimic/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>그림또따의 따라그리기</title>
+    <title>꽃과 소녀</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter for body, optional display font for headings -->
@@ -129,7 +129,7 @@
         <nav class="section-container flex justify-between items-center">
             <a href="#hero"
                 class="text-3xl font-extrabold text-purple-700 rounded-md p-1 -m-1 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75 transition-colors duration-300">
-                따라그리기<span class="text-sm font-medium ml-1">by 그림또따</span>
+                꽃과 소녀<span class="text-sm font-medium ml-1">by 그림또따</span>
             </a>
             <ul class="flex space-x-8">
                 <li><a href="#about"
