--- a/redraw_mimic/index.html
+++ b/redraw_mimic/index.html
@@ -181,15 +181,15 @@
                 </div>
                 <div class="md:col-span-2 text-lg leading-relaxed text-gray-700 animate-on-scroll slide-left delay-300">
                     <p class="mb-6">
-                        안녕하세요! 저는 그래픽 코딩에 전문성을 가진 그림또따입니다. 2009년부터 그래픽 코딩에
+                        안녕하세요! 저는 그래픽 코딩을 하는 그림또따입니다. 2009년부터 그래픽 코딩에
                         깊이 매료되어 작업해 왔습니다.
                     </p>
                     <p class="mb-6">
-                        기술과 디자인이 만나는 지점, 그 안에 움직임이 있습니다.
-                        멈춰 있는 이미지 속에 동적인 경험을 심어, 사용자와 더 깊이 연결됩니다.
+                        기술과 그림이 만나는 지점, 그 안에 움직임이 있습니다.
+                        멈춰 있는 이미지 속에 동적인 경험을 심어, 더 따뜻한 느낌을 전해줍니다.
                     </p>
                     <p>
-                        새로운 도전을 통해 끊임없이 성장하고, 당신의 사진이나 그림에 생명력을 넣는 것에 기여하고 싶습니다.
+                        당신의 사진이나 그림이 좀 더 살아있는 기분이 들도록 효과를 넣어보세요.
                     </p>
                 </div>
             </div>
@@ -207,7 +207,7 @@
                             class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                            <a href="https://youtube.com/shorts/qf511d4u3hg" target="_blank"
+                            <a href="https://youtube.com/shorts/EEoj_Fz_ybk" target="_blank"
                                 class="text-white bg-purple-600 hover:bg-purple-700 px-6 py-2 rounded-full font-semibold text-sm transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-purple-400 focus:ring-offset-2">
                                 자세히 보기
                             </a>
