--- a/pjcone_landing/index.html
+++ b/pjcone_landing/index.html
@@ -238,7 +238,14 @@
       PWA로 홈 화면에 추가하면 앱처럼 사용할 수 있으며, 서버 연결 시 팀 단위 협업이 가능합니다.<br />
       도커 기반 서버로 누구나 쉽게 컴퓨터에 서버를 설치하실 수 있습니다.
     </p>
+
+    <!-- 버튼 그룹 추가 -->
+    <div class="btn-group" style="margin-top:30px;">
+      <a href="https://is2you2.github.io/posts/instruction-pjcone-basic/" class="btn">사용설명서</a>
+      <a href="https://is2you2.github.io/posts/instruction-pjcone-server/" class="btn">서버 구축 설명서</a>
+    </div>
   </section>
+
 
   <section id="vision" class="fadein">
     <h2>Future Vision</h2>
