--- a/pjcone_landing/index.html
+++ b/pjcone_landing/index.html
@@ -256,8 +256,7 @@
   </section>
 
   <footer>
-    <p>© <span id="year"></span> 플레이디버그연구소</p>
-    <p>사업자등록번호: 568-61-00832</p>
+    <p>© <span id="year"></span> 그림또따</p>
     <script>
       document.getElementById('year').textContent = `2020-${new Date().getFullYear()}`;
     </script>
