--- a/privacy/index.html
+++ b/privacy/index.html
@@ -100,7 +100,8 @@
     <main>
         <section>
             <h2>1. 수집 정보</h2>
-            <p>각 서버의 운영자는 일반 개인이며, 사용자 식별을 위해 최소한의 계정 정보를 수집합니다.</p>
+            <p>Project: Cone 에서는 어떠한 개인정보도 수집하지 않습니다</p>
+            <p>사용하게될 각 서버의 운영자는 일반 개인이며, 사용자 식별을 위해 최소한의 계정 정보를 수집합니다.</p>
             <ul>
                 <li>이메일/비밀번호 쌍 (실제 개인 인증 목적이 아님, 예: aa@aa.aa 가능)</li>
             </ul>
