--- a/redraw_mimic/index.html
+++ b/redraw_mimic/index.html
@@ -295,7 +295,7 @@
                 </div>
             </div>
             <div class="text-center mt-12 animate-on-scroll delay-400">
-                <a href="https://www.youtube.com/@ddoutta" target="_blank"
+                <a href="https://www.youtube.com/watch?v=nMmKJmMU0Gc&list=PLKi91GB2mNEMwk6K8cf_oRmfssA8ihreJ" target="_blank"
                     class="inline-flex items-center bg-purple-700 text-white hover:bg-purple-800 transition-colors duration-300 font-bold py-3.5 px-10 rounded-full shadow-lg transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-purple-500 focus:ring-opacity-75 text-lg">
                     더 많은 작업 보기 (Youtube)
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
